# ml-fastvlm-webui

./: .gitignore  ACKNOWLEDGEMENTS  LICENSE  README.md  api.py  app_fastvlm_ui.py  core_logic.py  get_models.sh  model_downloader.py  predict.py  pyproject.toml  requirements.txt
app/: README.md  get_pretrained_mlx_model.sh
app/FastVLM/: FastVLM.swift  MediaProcessingExtensions.swift
app/FastVLM App/: ContentView.swift  FastVLM.entitlements  FastVLMApp.swift  FastVLMModel.swift  InfoView.swift
app/FastVLM App/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/FastVLM.xcodeproj/: project.pbxproj
app/FastVLM.xcodeproj/xcshareddata/xcschemes/: FastVLM App.xcscheme
app/Video/: CameraController.swift  CameraControlsView.swift  CameraType.swift  Video.h  VideoFrameView.swift
llava/: conversation.py  mm_utils.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_qwen.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py  mobileclip_encoder.py
llava/model/multimodal_encoder/mobileclip/: __init__.py  mci.py
llava/model/multimodal_encoder/mobileclip/configs/: mobileclip_l.json
llava/model/multimodal_projector/: builder.py
llava/train/: llava_trainer.py  train.py  train_qwen.py
locales/: en.json  zh.json
model_export/: README.md  export_vision_encoder.py  fastvlm_mlx-vlm.patch
